Dumb temp fix for parallax flickering (until Chromium fixes their CSS engine)

--- a/wp-content/themes/2064/style.css
+++ b/wp-content/themes/2064/style.css
@@ -421,7 +421,7 @@ text-align:center;
 }
 .header-background{
     width:100%;
-    height:100%;
+    height:99.8%;
     background-image:url(./2064/ibackground.png);
     background-repeat:no-repeat;
     background-size:cover;
@@ -483,7 +483,7 @@ text-align:center;
     background-image:url(./2064/turing.png);
     background-repeat:no-repeat;
     background-size:contain;
-    left: 10px!important;
+    left: 20px!important;
 }
 
 .header-2064 ul{
